feat: add database`s services and small changes

--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,7 @@ TELEGRAM_BOT=
 TELEGRAM_SESSION=
 PALACENFT_BASE_URL=
 TIMEOUT=
+TELEGRAM_SESSION_LOGIN_TIMEOUT=
 SLEEP_BETWEEN_REQUESTS=
 UPDATE_INTERVAL=
+DATABASE_URL=
