--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@ aiohttp==3.12.15
 aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.9.0
+asyncpg==0.30.0
 attrs==25.3.0
 click==8.2.2
 dotenv==0.9.9
 fastapi==0.116.1
 frozenlist==1.7.0
+greenlet==3.2.4
 h11==0.16.0
 idna==3.10
 multidict==6.6.3
@@ -21,6 +23,7 @@ PyTgCrypto==1.2.11
 python-dotenv==1.1.1
 PyYAML==6.0.2
 sniffio==1.3.1
+SQLAlchemy==2.0.42
 starlette==0.47.2
 typing-inspection==0.4.1
 typing_extensions==4.14.1
