chore: rename .env variables for clarity

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,13 @@
-API_ID=
-API_HASH=
-PHONE_NUMBER=""
-YOUR_TELEGRAM_ID=
-USERNAME=
-X_USER_DATA=user=
-TELEGRAM_BOT=
-TELEGRAM_SESSION=
-PALACENFT_BASE_URL=
-TIMEOUT=
-TELEGRAM_SESSION_LOGIN_TIMEOUT=
-SLEEP_BETWEEN_REQUESTS=
-UPDATE_INTERVAL=
-DATABASE_URL=
+TELEGRAM_API_ID=
+TELEGRAM_API_HASH=
+TELEGRAM_PHONE_NUMBER=""
+TELEGRAM_USERNAME=
+PALACENFT_X_USER_DATA=user=...first_name...last_name...username...language_code...allows_write_to_pm...photo_url....
+PALACENFT_BOT=@palacenftbot
+TELEGRAM_SESSION_NAME=session
+PALACENFT_BASE_URL=https://palacenft.com/api/v1
+REQUEST_TIMEOUT=10
+TELEGRAM_SESSION_LOGIN_TIMEOUT=60
+COLLECTION_REQUEST_DELAY=1
+COLLECTIONS_UPDATE_INTERVAL=3600
+ASYNC_DATABASE_URL=postgresql+asyncpg://tg-user:password@localhost:5432/postgres
